istio-configs-example/FaultInjection_Example/Gateway.yaml
---
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: helloworld-gateway
spec:
  servers:
    - hosts:
        - '*' # Domain name of the external website
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway #Use Istio default gateway implementatio
